# pywechat

./: .gitignore  README.md  pyproject.toml
examples/: .env.example  README.md
examples/server/: config.py  log_config_dev.yaml  main.py  wechat.py
examples/server/routers/: client.py  push.py
pywechat/: cache.py  client.py
pywechat/models/: message.py
tests/: README.md  conftest.py  test_client.py
